# adxray-spy

./: .gitignore  README.md  ad_creative_analysis.py  adxray_spy_core.py  adxray_spy_gui.py  analyze.py  build_exe.bat  collect.py  config.py  content_analysis.py  cross_platform.py  deep_dive.py  fb_ad_spy.py  install_opencv.py  pyproject.toml  recommend.py  run_all.py  viral_deepdive.py
