[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "adxray-spy"
version = "1.0.0"
description = "ADXRay 广告投放数据提取工具 - 输入游戏名，自动提取投放数据"
authors = [{name = "adxray-spy"}]
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40",
]

[project.scripts]
adxray-spy = "adxray_spy_gui:main"
adxray-spy-cli = "adxray_spy_core:main_cli"

[tool.setuptools.packages.find]
include = ["adxray_spy*"]
